TBT 1.0 - 22 Mar 2009 - meinhard, robin, jaromil
	pure javascript TBT recorder
	new docuwiki save format (JSON wrapped)
	js typewriter improvements (now reentrant)
	C++ API documented with doxygen
	some improvements to slw library
	
TBT 0.9 - 7 Nov 2008 - jaromil
	Fixed recording from <stdin>
	Better organised command line switches
	Usability improvements in console mode
	License upgraded to GNU GPL version 3
	Documentation updates
	
TBT 0.8 - 20 Oct 2008 - caedes, jaromil
	New Python-GTK graphical user interface
	Timing mode now defaults to posix
	TBT file format conversion
	Fixed the 100% cpu usage on some distros
	Documentation updates

TBT 0.7 - 15 Apr 2007 - pallotron
	New interactive website for TBT messaging (PHP)

TBT 0.6 - 31 Jan 2007 - jaromil, alpt
	Now building a single binary utility (aliased)
	Commandline mode for piped input/output
	Html/javscript renderer
	User's manual page

TBT 0.5 - 18 Dec 2006 - jaromil
	Clock fine tuned to realtime low-latency
	64bit format timecode
	Threaded RTC timer, fallback to POSIX.1
	Code Cleanup

TBT 0.4 - 9 Feb 2006 - jaromil
	Removed dependency from STL
	Added Linklist and Utils
	Fix to compile on NetBSD
	Fix to run on MIPS processor
	Rendering options and some cleanup

TypeWRotor 0.3 - 6 Feb 2006 - jaromil, pallotron
	CLI interface
	Apple/OSX binaries

Time-Based-Text 0.2 - 5 Feb 2006 - jaromil
	Modular rewrite in C++
	code should be readable
	console class (re)written (from FreeJ S-Lang interface)
	renderers for .tbt and ASCII
	initial support to export in JavaScript
	problem: console behaviour needs fixes
		
Clickrec 0.1 - 29 Jan 2006 - jaromil, jodi
	first implementation in C using a keylogger
	problem: is not portable
	
ADOLF 0.0 - somewhere in 2005
	Jaromil and Jodi meet again, we talk about Kevin Mitnick and Email
	software, ASCII Art and Keylogging, fingering around.