@@ -1,5 +1,5 @@
 
-Time Based Text was invented by Denis Jaromil Rojo - jaromil dyne.org
+Time Based Text was invented by Denis Roio - Jaromil dyne.org
 
 Concept ideated with the contribution of Jodi - jodi.org
 
