@@ -1,25 +1,0 @@
-<p>
-
-TBT has built-in rendering for HTML pages containing our recordings: a
-javascript class is provided to play them back live on homepages.
-
-</p>
-
-<p>
-
-If you use the '-s html' option, an html file will be generated right
-after the recording, you'll be then able to modify it (colors and
-fonts) and then include it on your homepage. Along with the html file,
-you should also include the tbt-typewriter.js file in the same
-directory.
-
-</p>
-
-<p>
-
-Everything in the generated html file can be moved and included in
-bigger html pages, just make sure that you preserve intact all the
-contents of the two &lt;script&gt; tags contained inside.
-
-</p>
-
