@@ -22,8 +22,8 @@ x playback control (rewind, fast forward etc.)
 
 
 
-send remarks and patches to http://dyne.org/hackers_contact.php
+send remarks and patches to http://dyne.org/contact
 
-or get in touch with coders via IRC:
-irc.dyne.org port 9999 (SSL) #dyne
+or get in touch with coders via IRC on http://hinezumi.im
+	hinezumi.im port 9999 (SSL) #dyne
 
