@@ -4,7 +4,7 @@
 # General configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = Time Based Text _code_doc
-PROJECT_NUMBER         = 0.9
+PROJECT_NUMBER         = 1.1
 OUTPUT_DIRECTORY       = .
 OUTPUT_LANGUAGE        = English
 USE_WINDOWS_ENCODING   = NO
@@ -58,7 +58,7 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = ..
+INPUT                  = ../../src
 FILE_PATTERNS          = *.h *.cpp
 RECURSIVE              = NO
 EXCLUDE                = 
