@@ -1,11 +1,11 @@
 
-TBT will be exhibited as a net-art project in South Africa
+TBT has been mentioned in the Vilem Flusser award 2009 assigned to Jaromil
+(Berlin, Transmediale)
+
+TBT has been exhibited as a net-art project in South Africa
 JOBURG Art Fair, April 2009, Johannesburg
- http://www.joburgartfair.co.za
 
 TBT has been exhibited as an on-site art installation
 SPEAKING OUT LOUD - hosted by the Netherlands Media Art Institute 
 in November 2008, Amsterdam - Montevideo - Time Based Arts
-http://transition.turbulence.org/blog/2008/10/07/speaking-out-loud-amsterdam/
-http://criticart.web-log.nl/criticart_08/2008/12/carefulwrite--1.html
 
