@@ -1,3 +1,8 @@
+TBT 1.1 - 9 Apr 2012 - jaromil
+	Small build fixes
+	Easy to use OSX version
+	New webpage
+
 TBT 1.0 - 22 Mar 2009 - meinhard, robin, jaromil
 	pure javascript TBT recorder
 	new docuwiki save format (JSON wrapped)
